Updated splash photo

--- a/Maelstrom-Info.plist
+++ b/Maelstrom-Info.plist
@@ -18,6 +18,8 @@
 				<string>Default@2x.png</string>
 				<string>iphone-appicon.png</string>
 				<string>iphone-appicon@2x.png</string>
+				<string>Default.png</string>
+				<string>Default@2x.png</string>
 			</array>
 		</dict>
 	</dict>
